# smartfox

android/: Android.mk
ios/Index/DataStore/v5/units/: AddBuddyRequest.o-OB1LTHIMOZ89  AdminMessageRequest.o-1OX8FZMCUD4Z5  BBClient.o-PSAJ49MLK2C0  BBEvent.o-RBCIKD1SQWWB  BanUserRequest.o-1BJW9BRRTVGTE  BaseController.o-1NH8QZQBTHQ4U  BaseEvent.o-32UZ6LJWEKEOE  (+149 more)
ios/smartfox.xcodeproj/: project.pbxproj
src/smartfox/: CMakeLists.txt  SmartFox.cpp  SmartFox.h
src/smartfox/Bitswarm/: BaseController.cpp  BaseController.h  BitSwarmClient.cpp  BitSwarmClient.h  BitSwarmEvent.cpp  BitSwarmEvent.h  ConnectionModes.cpp  ConnectionModes.h  IController.h  IMessage.h  IUDPManager.h  IoHandler.h  Message.cpp  Message.h  PacketReadState.h  PacketReadTransition.h  UDPManager.cpp  UDPManager.h
src/smartfox/Bitswarm/BBox/: BBClient.cpp  BBClient.h  BBEvent.cpp  BBEvent.h
src/smartfox/Controllers/: ExtensionController.cpp  ExtensionController.h  SystemController.cpp  SystemController.h
src/smartfox/Core/: BaseEvent.cpp  BaseEvent.h  DefaultPacketEncrypter.cpp  IDispatchable.h  IPacketEncrypter.h  PacketHeader.cpp  PacketHeader.h  SFSBuddyEvent.cpp  SFSBuddyEvent.h  SFSEvent.cpp  SFSEvent.h  SFSIOHandler.cpp  SFSProtocolCodec.cpp  SFSProtocolCodec.h  ThreadManager.cpp  ThreadManager.h
src/smartfox/Core/Sockets/: IPAddress.cpp  IPAddress.h  ISocketLayer.h  SocketErrors.h  TCPClient.cpp  TCPClient.h  TCPClientSSL.cpp  TCPClientSSL.h  TCPSocketLayer.cpp  TCPSocketLayer.h  UDPClient.cpp  UDPClient.h  UDPSocketLayer.cpp  UDPSocketLayer.h
src/smartfox/Entities/: Buddy.h  IMMOItem.h  MMOItem.cpp  MMOItem.h  MMORoom.cpp  MMORoom.h  Room.h  SFSBuddy.cpp  SFSBuddy.h  SFSConstants.cpp  SFSConstants.h  SFSRoom.cpp  SFSRoom.h  SFSUser.cpp  SFSUser.h  User.h  UserPrivileges.h
src/smartfox/Entities/Data/: ISFSArray.h  ISFSObject.h  SFSArray.cpp  SFSArray.h  SFSDataConverter.cpp  SFSDataConverter.hpp  SFSDataType.h  SFSDataWrapper.cpp  SFSDataWrapper.h  SFSObject.cpp  SFSObject.h  Vec3D.cpp  Vec3D.h
src/smartfox/Entities/Invitation/: Invitation.h  InvitationReply.h  SFSInvitation.cpp  SFSInvitation.h
src/smartfox/Entities/Managers/: IBuddyManager.h  IRoomManager.h  IUserManager.h  SFSBuddyManager.cpp  SFSBuddyManager.h  SFSGlobalUserManager.cpp  SFSGlobalUserManager.h  SFSRoomManager.cpp  SFSRoomManager.h  SFSUserManager.cpp  SFSUserManager.h
src/smartfox/Entities/Match/: BoolMatch.cpp  BoolMatch.h  IMatcher.h  LogicOperator.cpp  LogicOperator.h  MatchExpression.cpp  MatchExpression.h  NumberMatch.cpp  NumberMatch.h  RoomProperties.cpp  RoomProperties.h  StringMatch.cpp  StringMatch.h  UserProperties.cpp  UserProperties.h
src/smartfox/Entities/Variables/: BaseVariable.cpp  BaseVariable.h  BuddyVariable.h  IMMOItemVariable.h  MMOItemVariable.cpp  MMOItemVariable.h  ReservedBuddyVariables.cpp  ReservedBuddyVariables.h  ReservedRoomVariables.cpp  ReservedRoomVariables.h  RoomVariable.h  SFSBuddyVariable.cpp  SFSBuddyVariable.h  SFSRoomVariable.cpp  SFSRoomVariable.h  SFSUserVariable.cpp  SFSUserVariable.h  UserVariable.h  Variable.h  VariableType.h
src/smartfox/Exceptions/: SFSCodecError.cpp  SFSCodecError.h  SFSError.cpp  SFSError.h  SFSValidationError.cpp  SFSValidationError.h
src/smartfox/Http/: SFSWebClient.cpp  SFSWebClient.h
src/smartfox/Logging/: LogLevel.h  Logger.cpp  Logger.h  LoggerEvent.cpp  LoggerEvent.h
src/smartfox/Protocol/: IProtocolCodec.h
src/smartfox/Protocol/Serialization/: DefaultObjectDumpFormatter.cpp  DefaultObjectDumpFormatter.h  DefaultSFSDataSerializer.cpp  DefaultSFSDataSerializer.h  ISFSDataSerializer.h
src/smartfox/Requests/: AdminMessageRequest.cpp  AdminMessageRequest.h  BanMode.h  BanUserRequest.cpp  BanUserRequest.h  BaseRequest.cpp  BaseRequest.h  ChangeRoomCapacityRequest.cpp  ChangeRoomCapacityRequest.h  ChangeRoomNameRequest.cpp  ChangeRoomNameRequest.h  ChangeRoomPasswordStateRequest.cpp  ChangeRoomPasswordStateRequest.h  CreateRoomRequest.cpp  CreateRoomRequest.h  ExtensionRequest.cpp  ExtensionRequest.h  FindRoomsRequest.cpp  FindRoomsRequest.h  FindUsersRequest.cpp  FindUsersRequest.h  GenericMessageRequest.cpp  GenericMessageRequest.h  GenericMessageType.h  HandshakeRequest.cpp  HandshakeRequest.h  IRequest.h  JoinRoomRequest.cpp  JoinRoomRequest.h  KickUserRequest.cpp  KickUserRequest.h  LeaveRoomRequest.cpp  LeaveRoomRequest.h  LoginRequest.cpp  LoginRequest.h  LogoutRequest.cpp  LogoutRequest.h  ManualDisconnectionRequest.cpp  ManualDisconnectionRequest.h  MessageRecipientMode.cpp  (+27 more)
src/smartfox/Requests/Buddylist/: AddBuddyRequest.cpp  AddBuddyRequest.h  BlockBuddyRequest.cpp  BlockBuddyRequest.h  BuddyMessageRequest.cpp  BuddyMessageRequest.h  GoOnlineRequest.cpp  GoOnlineRequest.h  InitBuddyListRequest.cpp  InitBuddyListRequest.h  RemoveBuddyRequest.cpp  RemoveBuddyRequest.h  SetBuddyVariablesRequest.cpp  SetBuddyVariablesRequest.h
src/smartfox/Requests/Game/: CreateSFSGameRequest.cpp  CreateSFSGameRequest.h  InvitationReplyRequest.cpp  InvitationReplyRequest.h  InviteUsersRequest.cpp  InviteUsersRequest.h  JoinRoomInvitationRequest.cpp  JoinRoomInvitationRequest.h  QuickJoinGameRequest.cpp  QuickJoinGameRequest.h  SFSGameSettings.cpp  SFSGameSettings.h
src/smartfox/Requests/MMO/: MMORoomSettings.cpp  MMORoomSettings.h  SetMMOItemVariables.cpp  SetMMOItemVariables.h  SetUserPositionRequest.cpp  SetUserPositionRequest.h
src/smartfox/Util/: BuddyOnlineState.h  ByteArray.cpp  ByteArray.h  ClientDisconnectionReason.cpp  ClientDisconnectionReason.h  Common.h  ConfigData.cpp  ConfigData.h  ConfigLoader.cpp  ConfigLoader.h  CryptoInitializer.cpp  CryptoInitializer.h  CryptoKey.cpp  CryptoKey.h  DelegateOneArgument.h  DelegateThreeArguments.h  DelegateTwoArguments.h  DelegateZeroArgument.h  EventDispatcher.cpp  EventDispatcher.h  EventTwoArguments.h  EventZeroArgument.h  LagMonitor.cpp  LagMonitor.h  PasswordUtil.cpp  PasswordUtil.h  SFSErrorCodes.cpp  SFSErrorCodes.h  StringFormatter.h
src/smartfox/Util/XMLParser/: XMLNode.cpp  XMLNode.h  XMLNodeList.cpp  XMLNodeValue.cpp  XMLNodeValue.h  XMLObject.h  XMLParser.cpp  XMLParser.h
(+1227 files in other folders)
