cmake_minimum_required(VERSION 3.1)

project(server)

set(COCOS2DX_ROOT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../../../cocos2d)

include_directories(
        ${CMAKE_CURRENT_SOURCE_DIR}/../../../boost/include
        ${CMAKE_CURRENT_SOURCE_DIR}/..
        ${COCOS2DX_ROOT_PATH}/external/openssl/include/android
)

set(LIB_SRC
        Bitswarm/BaseController.cpp
        Bitswarm/BBox/BBClient.cpp
        Bitswarm/BBox/BBEvent.cpp
        Bitswarm/BitSwarmClient.cpp
        Bitswarm/BitSwarmEvent.cpp
        Bitswarm/ConnectionModes.cpp
        Bitswarm/Message.cpp
        Bitswarm/PendingPacket.cpp
        Bitswarm/UDPManager.cpp
        Controllers/ExtensionController.cpp
        Controllers/SystemController.cpp
        Core/BaseEvent.cpp
        Core/DefaultPacketEncrypter.cpp
        Core/PacketHeader.cpp
        Core/SFSBuddyEvent.cpp
        Core/SFSEvent.cpp
        Core/SFSIOHandler.cpp
        Core/SFSProtocolCodec.cpp
        Core/Sockets/IPAddress.cpp
        Core/Sockets/TCPClient.cpp
        Core/Sockets/TCPClientSSL.cpp
        Core/Sockets/TCPSocketLayer.cpp
        Core/Sockets/UDPClient.cpp
        Core/Sockets/UDPSocketLayer.cpp
        Core/ThreadManager.cpp
        Entities/Data/SFSArray.cpp
        Entities/Data/SFSDataConverter.cpp
        Entities/Data/SFSDataWrapper.cpp
        Entities/Data/SFSObject.cpp
        Entities/Data/Vec3D.cpp
        Entities/Invitation/SFSInvitation.cpp
        Entities/Managers/SFSBuddyManager.cpp
        Entities/Managers/SFSGlobalUserManager.cpp
        Entities/Managers/SFSRoomManager.cpp
        Entities/Managers/SFSUserManager.cpp
        Entities/Match/BoolMatch.cpp
        Entities/Match/LogicOperator.cpp
        Entities/Match/MatchExpression.cpp
        Entities/Match/NumberMatch.cpp
        Entities/Match/RoomProperties.cpp
        Entities/Match/StringMatch.cpp
        Entities/Match/UserProperties.cpp
        Entities/MMOItem.cpp
        Entities/MMORoom.cpp
        Entities/SFSBuddy.cpp
        Entities/SFSConstants.cpp
        Entities/SFSRoom.cpp
        Entities/SFSUser.cpp
        Entities/Variables/BaseVariable.cpp
        Entities/Variables/MMOItemVariable.cpp
        Entities/Variables/ReservedBuddyVariables.cpp
        Entities/Variables/ReservedRoomVariables.cpp
        Entities/Variables/SFSBuddyVariable.cpp
        Entities/Variables/SFSRoomVariable.cpp
        Entities/Variables/SFSUserVariable.cpp
        Exceptions/SFSCodecError.cpp
        Exceptions/SFSError.cpp
        Exceptions/SFSValidationError.cpp
        FSM/FiniteStateMachine.cpp
        FSM/FSMState.cpp
        Http/SFSWebClient.cpp
        Logging/Logger.cpp
        Logging/LoggerEvent.cpp
        Protocol/Serialization/DefaultObjectDumpFormatter.cpp
        Protocol/Serialization/DefaultSFSDataSerializer.cpp
        Requests/AdminMessageRequest.cpp
        Requests/BanUserRequest.cpp
        Requests/BaseRequest.cpp
        Requests/Buddylist/AddBuddyRequest.cpp
        Requests/Buddylist/BlockBuddyRequest.cpp
        Requests/Buddylist/BuddyMessageRequest.cpp
        Requests/Buddylist/GoOnlineRequest.cpp
        Requests/Buddylist/InitBuddyListRequest.cpp
        Requests/Buddylist/RemoveBuddyRequest.cpp
        Requests/Buddylist/SetBuddyVariablesRequest.cpp
        Requests/ChangeRoomCapacityRequest.cpp
        Requests/ChangeRoomNameRequest.cpp
        Requests/ChangeRoomPasswordStateRequest.cpp
        Requests/CreateRoomRequest.cpp
        Requests/ExtensionRequest.cpp
        Requests/FindRoomsRequest.cpp
        Requests/FindUsersRequest.cpp
        Requests/Game/CreateSFSGameRequest.cpp
        Requests/Game/InvitationReplyRequest.cpp
        Requests/Game/InviteUsersRequest.cpp
        Requests/Game/JoinRoomInvitationRequest.cpp
        Requests/Game/QuickJoinGameRequest.cpp
        Requests/Game/SFSGameSettings.cpp
        Requests/GenericMessageRequest.cpp
        Requests/HandshakeRequest.cpp
        Requests/JoinRoomRequest.cpp
        Requests/KickUserRequest.cpp
        Requests/LeaveRoomRequest.cpp
        Requests/LoginRequest.cpp
        Requests/LogoutRequest.cpp
        Requests/ManualDisconnectionRequest.cpp
        Requests/MessageRecipientMode.cpp
        Requests/MMO/MapLimits.cpp
        Requests/MMO/MMORoomSettings.cpp
        Requests/MMO/SetMMOItemVariables.cpp
        Requests/MMO/SetUserPositionRequest.cpp
        Requests/ModeratorMessageRequest.cpp
        Requests/ObjectMessageRequest.cpp
        Requests/PingPongRequest.cpp
        Requests/PlayerToSpectatorRequest.cpp
        Requests/PrivateMessageRequest.cpp
        Requests/PublicMessageRequest.cpp
        Requests/RoomEvents.cpp
        Requests/RoomExtension.cpp
        Requests/RoomPermissions.cpp
        Requests/RoomSettings.cpp
        Requests/SetRoomVariablesRequest.cpp
        Requests/SetUserVariablesRequest.cpp
        Requests/SpectatorToPlayerRequest.cpp
        Requests/SubscribeRoomGroupRequest.cpp
        Requests/UnsubscribeRoomGroupRequest.cpp
        SmartFox.cpp
        Util/ByteArray.cpp
        Util/ClientDisconnectionReason.cpp
        Util/ConfigData.cpp
        Util/ConfigLoader.cpp
        Util/CryptoInitializer.cpp
        Util/CryptoKey.cpp
        Util/EventDispatcher.cpp
        Util/LagMonitor.cpp
        Util/PasswordUtil.cpp
        Util/SFSErrorCodes.cpp
        Util/XMLParser/XMLNode.cpp
        Util/XMLParser/XMLNodeList.cpp
        Util/XMLParser/XMLNodeValue.cpp
        Util/XMLParser/XMLObject.cpp
        Util/XMLParser/XMLParser.cpp
        )

set(LIB_HEADERS
        Entities/Data/SFSDataConverter.hpp
        Bitswarm/BaseController.h
        Bitswarm/BBox/BBClient.h
        Bitswarm/BBox/BBEvent.h
        Bitswarm/BitSwarmClient.h
        Bitswarm/BitSwarmEvent.h
        Bitswarm/ConnectionModes.h
        Bitswarm/IController.h
        Bitswarm/IMessage.h
        Bitswarm/IoHandler.h
        Bitswarm/IUDPManager.h
        Bitswarm/Message.h
        Bitswarm/PacketReadState.h
        Bitswarm/PacketReadTransition.h
        Bitswarm/PendingPacket.h
        Bitswarm/UDPManager.h
        Controllers/ExtensionController.h
        Controllers/SystemController.h
        Core/BaseEvent.h
        Core/DefaultPacketEncrypter.h
        Core/IDispatchable.h
        Core/IPacketEncrypter.h
        Core/PacketHeader.h
        Core/SFSBuddyEvent.h
        Core/SFSEvent.h
        Core/SFSIOHandler.h
        Core/SFSProtocolCodec.h
        Core/Sockets/IPAddress.h
        Core/Sockets/ISocketLayer.h
        Core/Sockets/SocketErrors.h
        Core/Sockets/TCPClient.h
        Core/Sockets/TCPClientSSL.h
        Core/Sockets/TCPSocketLayer.h
        Core/Sockets/UDPClient.h
        Core/Sockets/UDPSocketLayer.h
        Core/SynchronizationObject.h
        Core/ThreadManager.h
        Entities/Buddy.h
        Entities/Data/ISFSArray.h
        Entities/Data/ISFSObject.h
        Entities/Data/SFSArray.h
        Entities/Data/SFSDataType.h
        Entities/Data/SFSDataWrapper.h
        Entities/Data/SFSObject.h
        Entities/Data/Vec3D.h
        Entities/IMMOItem.h
        Entities/Invitation/Invitation.h
        Entities/Invitation/InvitationReply.h
        Entities/Invitation/SFSInvitation.h
        Entities/Managers/IBuddyManager.h
        Entities/Managers/IRoomManager.h
        Entities/Managers/IUserManager.h
        Entities/Managers/SFSBuddyManager.h
        Entities/Managers/SFSGlobalUserManager.h
        Entities/Managers/SFSRoomManager.h
        Entities/Managers/SFSUserManager.h
        Entities/Match/BoolMatch.h
        Entities/Match/IMatcher.h
        Entities/Match/LogicOperator.h
        Entities/Match/MatchExpression.h
        Entities/Match/NumberMatch.h
        Entities/Match/RoomProperties.h
        Entities/Match/StringMatch.h
        Entities/Match/UserProperties.h
        Entities/MMOItem.h
        Entities/MMORoom.h
        Entities/Room.h
        Entities/SFSBuddy.h
        Entities/SFSConstants.h
        Entities/SFSRoom.h
        Entities/SFSUser.h
        Entities/User.h
        Entities/UserPrivileges.h
        Entities/Variables/BaseVariable.h
        Entities/Variables/BuddyVariable.h
        Entities/Variables/IMMOItemVariable.h
        Entities/Variables/MMOItemVariable.h
        Entities/Variables/ReservedBuddyVariables.h
        Entities/Variables/ReservedRoomVariables.h
        Entities/Variables/RoomVariable.h
        Entities/Variables/SFSBuddyVariable.h
        Entities/Variables/SFSRoomVariable.h
        Entities/Variables/SFSUserVariable.h
        Entities/Variables/UserVariable.h
        Entities/Variables/Variable.h
        Entities/Variables/VariableType.h
        Exceptions/SFSCodecError.h
        Exceptions/SFSError.h
        Exceptions/SFSValidationError.h
        FSM/FiniteStateMachine.h
        FSM/FSMState.h
        Http/SFSWebClient.h
        Logging/Logger.h
        Logging/LoggerEvent.h
        Logging/LogLevel.h
        Protocol/IProtocolCodec.h
        Protocol/Serialization/DefaultObjectDumpFormatter.h
        Protocol/Serialization/DefaultSFSDataSerializer.h
        Protocol/Serialization/ISFSDataSerializer.h
        Protocol/Serialization/SerializableSFSType.h
        Requests/AdminMessageRequest.h
        Requests/BanMode.h
        Requests/BanUserRequest.h
        Requests/BaseRequest.h
        Requests/Buddylist/AddBuddyRequest.h
        Requests/Buddylist/BlockBuddyRequest.h
        Requests/Buddylist/BuddyMessageRequest.h
        Requests/Buddylist/GoOnlineRequest.h
        Requests/Buddylist/InitBuddyListRequest.h
        Requests/Buddylist/RemoveBuddyRequest.h
        Requests/Buddylist/SetBuddyVariablesRequest.h
        Requests/ChangeRoomCapacityRequest.h
        Requests/ChangeRoomNameRequest.h
        Requests/ChangeRoomPasswordStateRequest.h
        Requests/CreateRoomRequest.h
        Requests/ExtensionRequest.h
        Requests/FindRoomsRequest.h
        Requests/FindUsersRequest.h
        Requests/Game/CreateSFSGameRequest.h
        Requests/Game/InvitationReplyRequest.h
        Requests/Game/InviteUsersRequest.h
        Requests/Game/JoinRoomInvitationRequest.h
        Requests/Game/QuickJoinGameRequest.h
        Requests/Game/SFSGameSettings.h
        Requests/GenericMessageRequest.h
        Requests/GenericMessageType.h
        Requests/HandshakeRequest.h
        Requests/IRequest.h
        Requests/JoinRoomRequest.h
        Requests/KickUserRequest.h
        Requests/LeaveRoomRequest.h
        Requests/LoginRequest.h
        Requests/LogoutRequest.h
        Requests/ManualDisconnectionRequest.h
        Requests/MessageRecipientMode.h
        Requests/MMO/MapLimits.h
        Requests/MMO/MMORoomSettings.h
        Requests/MMO/SetMMOItemVariables.h
        Requests/MMO/SetUserPositionRequest.h
        Requests/ModeratorMessageRequest.h
        Requests/ObjectMessageRequest.h
        Requests/PingPongRequest.h
        Requests/PlayerToSpectatorRequest.h
        Requests/PrivateMessageRequest.h
        Requests/PublicMessageRequest.h
        Requests/RequestType.h
        Requests/RoomEvents.h
        Requests/RoomExtension.h
        Requests/RoomPermissions.h
        Requests/RoomSettings.h
        Requests/SetRoomVariablesRequest.h
        Requests/SetUserVariablesRequest.h
        Requests/SpectatorToPlayerRequest.h
        Requests/SubscribeRoomGroupRequest.h
        Requests/UnsubscribeRoomGroupRequest.h
        SmartFox.h
        Util/BuddyOnlineState.h
        Util/ByteArray.h
        Util/ClientDisconnectionReason.h
        Util/Common.h
        Util/ConfigData.h
        Util/ConfigLoader.h
        Util/CryptoInitializer.h
        Util/CryptoKey.h
        Util/DelegateOneArgument.h
        Util/DelegateThreeArguments.h
        Util/DelegateTwoArguments.h
        Util/DelegateZeroArgument.h
        Util/EventDispatcher.h
        Util/EventOneArgument.h
        Util/EventThreeArguments.h
        Util/EventTwoArguments.h
        Util/EventZeroArgument.h
        Util/LagMonitor.h
        Util/md5/md5.h
        Util/PasswordUtil.h
        Util/SFSErrorCodes.h
        Util/StringFormatter.h
        Util/XMLParser/XMLNode.h
        Util/XMLParser/XMLNodeList.h
        Util/XMLParser/XMLNodeValue.h
        Util/XMLParser/XMLObject.h
        Util/XMLParser/XMLParser.h
        )

add_definitions(-DBOOST_THREAD_PROVIDES_FUTURE)

add_library(${PROJECT_NAME} STATIC ${LIB_SRC} ${LIB_HEADERS})

target_include_directories(${PROJECT_NAME} PUBLIC
        .
        )

set_target_properties(${PROJECT_NAME}
        PROPERTIES
        ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
        LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
        )